# ML-From-Scratch

./: .clang-format  .gitignore  README.md
00_supervised_learning/linear_regression/lasso_regression/: .gitignore  CMakeLists.txt  lasso_reg.hpp
00_supervised_learning/linear_regression/linear_regression/: main.cpp
00_supervised_learning/linear_regression/ridge_regression/: main.cpp
00_supervised_learning/random_forest/: CMakeLists.txt  decision_tree.cpp  decision_tree.hpp
00_supervised_learning/regression/lasso_regression/: lasso_reg.cpp  lasso_reg.hpp  main.cpp  makefile
00_supervised_learning/regression/linear_regression/: lin_reg.cpp  lin_reg.hpp  makefile
00_supervised_learning/regression/ridge_regression/: main.cpp  makefile  ridge_reg.cpp  ridge_reg.hpp
01_unsupervised_learning/clustering/kmeans/: kmeans.cpp  kmeans.h  kmeans.hpp  main.cpp  makefile
04_optimization/genetic_algorithms/sga/: sga.qmd
04_optimization/simulated_annealing/: sa_tsp.qmd
mlfs/: Cargo.toml  README.md  pyproject.toml
mlfs/examples/: build_notebook.py  showcase.ipynb
mlfs/python/mlfs/: __init__.py
mlfs/src/: error.rs  lib.rs
mlfs/src/cluster/: agglomerative.rs  dbscan.rs  gmm.rs  kmeans.rs  mod.rs
mlfs/src/common/: distance.rs  labels.rs  linalg.rs  metrics.rs  mod.rs  preprocessing.rs  traits.rs  validation.rs
mlfs/src/decomposition/: mod.rs  pca.rs  tsne.rs
mlfs/src/ensemble/: adaboost.rs  gradient_boosting.rs  mod.rs  random_forest.rs
mlfs/src/linear/: lasso.rs  linear_regression.rs  logistic.rs  mod.rs  ridge.rs
mlfs/src/naive_bayes/: gaussian_nb.rs  mod.rs
mlfs/src/neighbors/: knn.rs  mod.rs
mlfs/src/nn/: mlp.rs  mod.rs
mlfs/src/pybind/: cluster.rs  decomposition.rs  ensemble.rs  linear.rs  mod.rs  naive_bayes.rs  neighbors.rs  nn.rs  preprocessing.rs  svm.rs  tree.rs
mlfs/src/svm/: mod.rs  svc.rs
mlfs/src/tree/: cart.rs  mod.rs
mlfs/tests/: test_python.py
